@@ -104,6 +104,8 @@ AC_FUNC_VPRINTF
 AC_CHECK_FUNCS([bzero ftime memset mkdir select strchr strrchr strstr])
 
 # Platform specific tests.
+CFLAGS_FOR_BUILD="$CFLAGS"
+export CFLAGS_FOR_BUILD
 dnl AC_CANONICAL_HOST
 case $host in
   *-*-mingw*)            ARCH="-D__WIN32__ -D__MINGW32__ -mwindows -D_WINDOWS" ;;
